--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,10 @@
             <% files.forEach(function(val){ %>
                 <div class="task w-72  px-3 py-4 rounded-md bg-zinc-800">
                     <h1 class="text-2xl tracking-tighter"><%= val.split(".txt").join("") %></h1>
-                    <a class="text-blue-500 inline-block mt-3" href="/files/<%= val %>">Read More</a>               
+                    <div class="flex w-full justify-between items-center mt-3">
+                        <a class="text-blue-500" href="/files/<%= val %>">Read More</a> 
+                        <a class="text-zinc-600" href="/edit/<%= val %>">Edit FileName</a>
+                    </div>
                 </div>
                 <%}) %>
 
